[CONEX] Añado nuevos componentes comunes

--- a/src/app/commons-elements/secundary-nav/secundary-nav.component.html
+++ b/src/app/commons-elements/secundary-nav/secundary-nav.component.html
@@ -1,13 +1,9 @@
 <div>
-  <ul>
-      <li [ngClass]="{'isSelected': isSelected ==='convenios'}" (click)="showDetails('convenios')">
-          Encomienda + nombre
-      </li>
-      <li [ngClass]="{'isSelected': isSelected ==='archivos'}" (click)="showDetails('archivos')">
-          Archivos
-      </li>
-      <li [ngClass]="{'isSelected': isSelected ==='relacionados'}" (click)="showDetails('relacionados')">
-          Relacionados
+  <ul >
+      <li *ngFor="let titulo of titulos" 
+          [ngClass]="{'isSelected': isSelected === titulo}" 
+          (click)="showDetails(titulo)">
+          {{titulo}}
       </li>
   </ul>
 </div>
