--- a/src/app/commons-elements/modal-download-file/modal-download-file.component.html
+++ b/src/app/commons-elements/modal-download-file/modal-download-file.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header background-header-footer">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="activeModal.close()">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="activeModal.close('cerrar')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -26,6 +26,6 @@
     <button type="button" 
             class="btn btn-secondary" 
             data-dismiss="modal"
-            (click)="activeModal.close()">Close</button>
+            (click)="activeModal.close('cerrar')">Close</button>
   </div>
 </div>
