--- a/src/app/modules/parcels/parcels/details-parcels/details-parcels.component.html
+++ b/src/app/modules/parcels/parcels/details-parcels/details-parcels.component.html
@@ -1,6 +1,8 @@
 <app-secundary-nav (optionSelected)="getOptionSelected($event)"
                     [titulos]="titulos"></app-secundary-nav>
-<app-detail *ngIf="isSelected === titulos[0]" ></app-detail>
+<app-detail *ngIf="isSelected === titulos[0]"
+            [detailParcel]="detail_parcel">
+</app-detail>
 <app-list-folder  *ngIf="isSelected === titulos[1]"
                   [listDetailsAgreement]="list_details_agreement"
                   (resultModal)="getResultModal($event)">
