[CONEX] Añado componentes de detalle de decretos

--- a/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/detail-decrees.component.html
+++ b/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/detail-decrees.component.html
@@ -1,3 +1,6 @@
-<p>
-  detail-decrees works!
-</p>
+<app-secundary-nav (optionSelected)="getOptionSelected($event)"
+                    [titulos]="titulos"></app-secundary-nav>
+<app-list-folder  *ngIf="isSelected === titulos[1]"
+                    [listDetailsAgreement]="list_details_agreement"
+                    (resultModal)="getResultModal($event)">
+  </app-list-folder>
