[CONEX] Añado función de componenetes comunes

--- a/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/detail-decrees.component.html
+++ b/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/detail-decrees.component.html
@@ -1,6 +1,6 @@
 <app-secundary-nav (optionSelected)="getOptionSelected($event)"
                     [titulos]="titulos"></app-secundary-nav>
 <app-list-folder  *ngIf="isSelected === titulos[1]"
-                    [listDetailsAgreement]="list_details_agreement"
+                    [listDetailsAgreement]="list"
                     (resultModal)="getResultModal($event)">
   </app-list-folder>
