[CONEX] Añado llamada a ultimos mock y cambio algunos estilos

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .router-definition{
     margin-left: 18%;
-    bottom: 0;
-    background-color:#F6F6F6; 
+    background-color:#F6F6F6;
+    width: 80%; 
 }
