--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -1,4 +1,6 @@
+<div class="row">
 <img class="logo_madrid" src="../../../assets/images/madrid.png">
+</div>
 <nav class="lat-nav">
     <div class="user-zone">
         {{nombreUsuario}}
