[CONEX] Añado pipe de ordenacion en la lista de decretos

--- a/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/list-detail/list-detail.component.html
+++ b/src/app/modules/decrees-resolutions/decrees-resolutions/detail-decrees/list-detail/list-detail.component.html
@@ -1,4 +1,4 @@
-<div  class="border-box header_div">
+<div *ngIf="detailDecrees" class="border-box header_div">
   <div class="title-box">
     {{'detail-decrees.titulo' | translate}}
   </div>
