[CONEX] Añado ancho por defecto a los botones de la ventana modal

--- a/src/app/commons-elements/modal-one-button/modal-one-button.component.html
+++ b/src/app/commons-elements/modal-one-button/modal-one-button.component.html
@@ -9,6 +9,6 @@
     <p>{{texto_modal}}</p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="activeModal.close('0')">{{texto_boton}}</button>
+    <button type="button" class="btn btn-secondary button-modal" (click)="activeModal.close('0')">{{texto_boton}}</button>
   </div>
 </div>
