--- a/src/app/commons-elements/modal-two-button/modal-two-button.component.html
+++ b/src/app/commons-elements/modal-two-button/modal-two-button.component.html
@@ -9,7 +9,7 @@
     <p>{{texto_modal}}</p>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="activeModal.close('1')">{{texto_boton1}}</button>
-    <button type="button" class="btn btn-secondary" (click)="activeModal.close('0')">{{texto_boton2}}</button>
+    <button type="button" class="btn btn-secondary button-modal" (click)="activeModal.close('1')">{{texto_boton1}}</button>
+    <button type="button" class="btn btn-secondary button-modal" (click)="activeModal.close('0')">{{texto_boton2}}</button>
   </div>
 </div>
