--- a/src/app/modules/count-down/count-down/count-down.component.html
+++ b/src/app/modules/count-down/count-down/count-down.component.html
@@ -1,3 +1,22 @@
-<p>
-  {{fecha_value}}
-</p>
+<div class="back_clock">
+  <!--<div class="row">
+    <p class="university"> Quedan </p> {{dias}} <p class="university"> días</p>
+  </div>
+  <div class="row">
+      {{horas}} <p class="university">Horas</p>
+  </div>
+  <div class="row">
+      {{minutos}} <p class="university"> minutos</p>
+  </div>
+  <div class="row">
+      {{segundos}} <p class="university"> segundos</p>
+  </div>-->
+  <div class="row">
+    <div class="col-md-4 offset-md-3">
+      Quedan
+    </div>
+  </div>
+  <div class="row">
+    <p class="university">{{dias}} dias {{horas}}:{{minutos}}:{{segundos}} </p>
+  </div>
+</div>
