--- a/src/app/modules/agreements/search-criteria-agreements/search-criteria-agreements.component.html
+++ b/src/app/modules/agreements/search-criteria-agreements/search-criteria-agreements.component.html
@@ -8,8 +8,8 @@
         <div class="form-group row">
           <label for="titulo" class="col-sm-3 col-form-label">{{'buscador.titulo_object' | translate}}</label>
           <div class="col-sm-3">
-            <input  type="text" 
-                    class="form-control" 
+            <input  type="text"
+                    class="form-control"
                     id="titulo"
                     name="titulo"
                     [(ngModel)]="convenio.titulo">
@@ -34,56 +34,64 @@
           <div class="form-group row col-sm-4">
             <label for="desde_description_organo" class="col-sm-3 col-form-label">{{'buscador.desde' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="date" 
-                      class="form-control" 
+              <input  type="date"
+                      class="form-control"
                       id="desde_description_organo"
                       name="desde_description_organo"
-                      [(ngModel)]="convenio.desde_description_organo" />
+                      [(ngModel)]="convenio.desde_description_organo"
+                      [ngClass]="{'input-error': !isValidateDate}"
+                      (change)="validateDate()" />
             </div>
           </div>
           <div class="form-group row col-sm-4">
             <label for="hasta_description_organo" class="col-sm-3 col-form-label">{{'buscador.hasta' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="date" 
-                      class="form-control" 
+              <input  type="date"
+                      class="form-control"
                       id="hasta_description_organo"
                       name="hasta_description_organo"
-                      [(ngModel)]="convenio.hasta_description_organo" />
+                      [(ngModel)]="convenio.hasta_description_organo"
+                      [ngClass]="{'input-error': !isValidateDate}"
+                      (change)="validateDate()" />
             </div>
           </div>
+          <div *ngIf="!isValidateDate" class="col-sm-6 offset-sm-4 alert alert-danger">
+            {{'errores.comparar_fecha' | translate}}
+         </div>
         </div>
         <div class="form-group row two_imputs_file">
           <label for="num_convenio" class="col-sm-3 col-form-label">{{'buscador.num_convenio' | translate}}</label>
           <div class="col-sm-9 row">
-            <input  type="text" 
-                    class="form-control num_convenio_abled" 
+            <input  type="number"
+                    class="form-control num_convenio_abled"
                     id="num_convenio_1"
                     name="num_convenio_1"
+                    max="999"
                     [(ngModel)]="convenio.num_convenio_1">
-            <input  type="text" 
-                    class="num_convenio_disbled" 
-                    disabled="true" 
+            <input  type="text"
+                    class="num_convenio_disbled"
+                    disabled="true"
                     placeholder="/">
-            <input  type="text" 
-                    class="form-control num_convenio_abled" 
+            <input  type="text"
+                    class="form-control num_convenio_abled"
                     id="num_convenio_2"
                     name="num_convenio_2"
                     [(ngModel)]="convenio.num_convenio_2">
-            <input  type="text" 
-                    class="num_convenio_disbled" 
-                    disabled="true" 
+            <input  type="text"
+                    class="num_convenio_disbled"
+                    disabled="true"
                     placeholder="/">
-            <input  type="text" 
-                    class="form-control num_convenio_abled" 
+            <input  type="text"
+                    class="form-control num_convenio_abled"
                     id="num_convenio_3"
                     name="num_convenio_3"
                     [(ngModel)]="convenio.num_convenio_3">
-            <input  type="text" 
-                    class="num_convenio_disbled" 
-                    disabled="true" 
+            <input  type="text"
+                    class="num_convenio_disbled"
+                    disabled="true"
                     placeholder="/">
-            <input  type="text" 
-                    class="form-control num_convenio_abled" 
+            <input  type="text"
+                    class="form-control num_convenio_abled"
                     id="num_convenio_4"
                     name="num_convenio_4"
                     [(ngModel)]="convenio.num_convenio_4">
@@ -94,7 +102,7 @@
           <div class="form-group row col-sm-4">
             <label class="col-sm-3 col-form-label">{{'buscador.desde' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="text" 
+              <input  type="text"
                       class="form-control"
                       id="desde_importe_gastos"
                       name="desde_importe_gastos"
@@ -104,10 +112,10 @@
           <div class="form-group row col-sm-4">
             <label class="col-sm-3 col-form-label">{{'buscador.hasta' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="text" 
+              <input  type="text"
                       class="form-control"
-                      id="hasta_importe_gastos" 
-                      name="hasta_importe_gastos" 
+                      id="hasta_importe_gastos"
+                      name="hasta_importe_gastos"
                       [(ngModel)]="convenio.hasta_importe_gastos" />
             </div>
           </div>
@@ -117,7 +125,7 @@
           <div class="form-group row col-sm-4">
             <label class="col-sm-3 col-form-label">{{'buscador.desde' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="text" 
+              <input  type="text"
                       class="form-control"
                       id="desde_importe_ingresos"
                       name="desde_importe_ingresos"
@@ -127,7 +135,7 @@
           <div class="form-group row col-sm-4">
             <label class="col-sm-3 col-form-label">{{'buscador.hasta' | translate}}</label>
             <div class="col-sm-9">
-              <input  type="text" 
+              <input  type="text"
                       class="form-control"
                       id="hasta_importe_ingresos"
                       name="hasta_importe_ingresos"
@@ -138,8 +146,8 @@
         <div class="form-group row two_imputs_file">
           <label for="organos_firmantes" class="col-sm-3 col-form-label">{{'buscador.organos_firmantes' | translate}}</label>
           <div class="col-sm-8">
-            <input  type="text" 
-                    class="form-control" 
+            <input  type="text"
+                    class="form-control"
                     id="organos_firmantes"
                     name="organos_firmantes"
                     [(ngModel)]="convenio.organos_firmantes">
@@ -149,7 +157,7 @@
           <div class="form-group row col-sm-6 ">
             <label class="col-sm-5 col-form-label">{{'buscador.entidades_firmantes' | translate}}</label>
             <div class="col-sm-7">
-              <input  type="text" 
+              <input  type="text"
                       class="form-control"
                       id="entidades_firmantes"
                       name="entidades_firmantes"
@@ -159,10 +167,10 @@
           <div class="form-group row col-sm-6">
             <label class="col-sm-5 col-form-label">{{'buscador.tipo_entidades' | translate}}</label>
             <div class="col-sm-6">
-              <select class="form-control selectpicker" 
+              <select class="form-control selectpicker"
                       id="tipo_entidades"
                       name="tipo_entidades"
-                      [(ngModel)]="convenio.tipo_entidades" 
+                      [(ngModel)]="convenio.tipo_entidades"
                       (change)="hiddenDefaultOption()">
                 <option [hidden]="hiddenOrgano">Selecione</option>
                 <option *ngFor="let tipo of tipoEntidad">{{tipo.name}}</option>
@@ -174,7 +182,7 @@
           <div class="form-group row col-sm-6 ">
             <label class="col-sm-5 col-form-label">{{'buscador.tipo_convenio' | translate}}</label>
             <div class="col-sm-7">
-              <select class="form-control selectpicker" 
+              <select class="form-control selectpicker"
                       id="tipo_convenio"
                       name="tipo_convenio"
                       [(ngModel)]="convenio.tipo_convenio"
@@ -187,7 +195,7 @@
           <div class="form-group row col-sm-6">
             <label class="col-sm-5 col-form-label">{{'buscador.materia' | translate}}</label>
             <div class="col-sm-6">
-              <select class="form-control" 
+              <select class="form-control"
                       id="materia"
                       name="materia"
                       [(ngModel)]="convenio.materia"
@@ -198,7 +206,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" 
+        <button type="submit"
                 class="btn btn-default">
                 {{'buscador.buscar' | translate}}
         </button>
